--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@ ga('send', 'pageview');
             <!-- Begin Menu -->
 
                 <ul class="navbar-nav mr-auto">
-                    {% if page.title == "Main" %}
+                    {% if page.title == "main" %}
                     <li class="nav-item active">
                     {% else %}
                     <li class="nav-item">
@@ -77,7 +77,7 @@ ga('send', 'pageview');
                         <a class="nav-link" href="{{ site.baseurl }}/">Main</a>
                     </li>
                     
-                    {% if page.title == "Study" or page.categories[0] == "Study" %}
+                    {% if page.title == "study" or page.categories[0] == "study" %}
                     <li class="nav-item active">
                     {% else %}
                     <li class="nav-item">
@@ -85,7 +85,7 @@ ga('send', 'pageview');
                         <a class="nav-link" href="{{ site.baseurl }}/study">Study</a>
                     </li>
 
-                    {% if page.title == "Project" or page.categoires[0] == "Project" %}
+                    {% if page.title == "project" or page.categoires[0] == "project" %}
                     <li class="nav-item active">
                     {% else %}
                     <li class="nav-item">
@@ -93,7 +93,7 @@ ga('send', 'pageview');
                         <a class="nav-link" href="{{ site.baseurl }}/project">Project</a>
                     </li>
 
-                    {% if page.title == "About" %}
+                    {% if page.title == "about" %}
                     <li class="nav-item active">
                     {% else %}
                     <li class="nav-item">
@@ -110,7 +110,7 @@ ga('send', 'pageview');
 <!-- End Navigation
 ================================================== -->
 
-{% if page.title == "Study" or page.title == "Project" or page.categories[0] == "Study" or page.categories[0] == "Project" or page.title == 'tags' %}
+{% if page.title == "study" or page.title == "project" or page.categories[0] == "study" or page.categories[0] == "project" or page.title == 'tags' %}
     {% if page.layout == "post" %}
     <div class="post-content">
     {% else %}
@@ -126,7 +126,7 @@ ga('send', 'pageview');
     
 <!-- Site Title
 ================================================== -->
-{% if page.title == "Main" %}
+{% if page.title == "main" %}
 <div class="mainheading">
     <h1 class="sitetitle">맑은</h1>
     <p class="lead">
@@ -135,7 +135,7 @@ ga('send', 'pageview');
         &laquo;--------------------------------------------&raquo;
     </p>
 </div>
-{% elsif page.title == "Study" or page.title == "Project" %}
+{% elsif page.title == "study" or page.title == "project" %}
 <div class="mainheading">
     <h1 class="sitetitle u-paddingTop15">{{ page.title }}</h1>
     <p class="lead u-marginBottom0">
