--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,7 +5,7 @@ title: Main
 
 
 {% if page.url == "/index.html" or page.url == "/study/index.html" or page.url == "/project/index.html" %}
-    {% if page.title == "Main" %}
+    {% if page.title == "main" %}
 <!-- Featured
 ================================================== -->
     <section class="featured-posts">
@@ -22,7 +22,7 @@ title: Main
 
         </div>
     </section>
-    {% elsif page.title == "Study" %}
+    {% elsif page.title == "study" %}
 <!-- CategoryFeatured
 ================================================== -->
     <section class="featured-posts u-marginBottom24">
@@ -59,7 +59,7 @@ title: Main
     {% endif %}
     
     {% else %}
-        {% if page.title == "Study" or page.title == "Project" %}
+        {% if page.title == "study" or page.title == "project" %}
         <section class="featured-posts u-marginBottom0">
             <div class="section-title">
                 <h2><span></span></h2>
@@ -95,7 +95,7 @@ title: Main
 
 </section>
 
-{% if page.title != "Main" %}
+{% if page.title != "main" %}
 <!-- Pagination
 ================================================== -->
 <div class="bottompagination">
