--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.jpg">
-
+{% if page.title == site.name %}
+<title>{{site.name}}</title>
+{% else %}
 <title>{{ page.title | capitalize }} | {{site.name}}</title>
+{% endif %}
 
 {% seo %}
 
