200917 kotlin codingtest practice

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,11 +5,62 @@ layout: default
 
 <section>
     <div class="section-title">
-        <h2><span>{{ page.title }}</span></h2>
+        <h2><span>Profile</span></h2>
     </div>
 
     <div class="article-post">
-    {{content}}
+    
+    <div class="row justify-content-between">
+        <div class="col-md-4 u-paddingTop100">
+            <div class="">
+            <center><p><img class="about" src="{{site.baseurl}}/assets/images/about/about_main.jpg" alt="malgeon blog about" /></p></center>
+            </div>
+            </div>
+
+        <div class="col-md-8 pr-5 u-marginTop50">
+        <h4>&nbsp;개발자를 위해 공부중에 있습니다.</h4>
+        &nbsp;&nbsp;대학에서 자료구조와 알고리즘을 C언어를 기반으로 배웠고, 개인적인 필요에 의해 JAVA로 자료구조와 알고리즘을 다시 공부하였습니다. <br><br>
+        &nbsp;&nbsp;개발 분야를 정하기 전 '결국 해봐야 어떤 분야가 재미있는지 아닌지 안다.' 라는 생각에 웹 개발을 5개월 가량 공부를 했으며 그 결과 이 블로그를 제작 할 수 있었습니다. <br> <br>
+        &nbsp;&nbsp;지금은 모바일에서 동작하는 아기자기한 움직임에 대한 매력에 안드로이드 앱개발에 흥미를 느끼고 코틀린을 공부하여 앱 개발 경험을 쌓으려고 하고 있습니다.
+        <Br><Br>
+        &nbsp;&nbsp;이제 안드로이드 개발 개인 프로젝트를 정해서 어플리케이션에 대한 경험을 쌓고자 합니다.
+        <Br><Br> 
+        </div>
     </div>
+</section>
+
+
+<section>
+    <div class="section-title">
+        <h2><span>Project</span></h2>
+    </div>
+    <div class="project-table project-md-table">
+        
+        <p class="project-title"><a class="project-link" href="{{ site.baseurl }}/project/web">Web Project</a></p>
+        <div class="project-table-div">
+            <table>
+                <tbody>
+                    <tr>
+                        <td class="project-fst-td u-md-padding">2020.05.07 ~ 07.03</td>
+                        <td class="project-snd-td">예약 서비스 클론 코딩(네이버 공연 및 영화 정보 제공 및 예약 웹 서비스)</td>
+                    </tr>
+                    <tr>
+                        <td class="project-fst-td u-md-padding">2020.07.27 ~ 09.17</td>
+                        <td class="project-snd-td">Malgeon Blog(Github page & Jekyll)</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        
+        <p class="project-title"><a class="project-link" href="{{ site.baseurl }}/project/android">Android Project</a></p>
+        <div class="project-table-div">
+            <table>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    
+
 
 </section>
