--- a/_includes/tagdescription.html
+++ b/_includes/tagdescription.html
@@ -13,7 +13,7 @@
         <div class="u-fontSize14 u-lineHeightBaseSans u-textColorDark u-paddingTop15 u-paddingBottom15">
             <div class="u-marginBottom15 u-breakWord">{{ page.subtitle }} </div>
             <a class=" link--darken u-accentColor--textDarken link--accent u-accentColor--textNormal"
-                href="#">More information</a>
+                href="{{ site.baseurl }}/about">More information</a>
         </div>
         
         <div class="u-fontSize14 u-lineHeightBaseSans u-textColorDark u-paddingBottom15">
