200922 malgeon blog project page repair

--- a/_includes/projectbox.html
+++ b/_includes/projectbox.html
@@ -1,6 +1,6 @@
 <!-- begin post -->
 {% assign author = site.authors[post.author] %}
-<div class="col-12">
+<div class="col-12 u-boxing">
     <div class="listfeaturedtag h-100">
         <div class="row h-100">
             <div class="col-12 col-md-7 col-lg-7 pr-lg-3">
@@ -25,7 +25,7 @@
                                 </div>
                             </h2>
                             <h4 class="card-text">{{ post.description | strip_html | truncatewords:25 }}</h4>
-                            <h4 class="card-text">{{ post.date | date_to_string }}</h4>
+                            <h4 class="card-text">{{ post.developperiod  }}</h4>
                         </div>
                     </div>
                 </div>
