--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -42,11 +42,11 @@ layout: default
                 <tbody>
                     <tr>
                         <td class="project-fst-td u-md-padding">2020.05.07 ~ 07.03</td>
-                        <td class="project-snd-td">예약 서비스 클론 코딩 (공연, 영화 정보 제공 및 예약 웹 서비스)</td>
+                        <td class="project-snd-td"><a class="project-table-link" href="#">예약 서비스 클론 코딩 (공연, 영화 정보 제공 및 예약 웹 서비스)</a></td>
                     </tr>
                     <tr>
                         <td class="project-fst-td u-md-padding">2020.07.27 ~ 09.17</td>
-                        <td class="project-snd-td">Malgeon Blog (Github page & Jekyll)</td>
+                        <td class="project-snd-td"><a class="project-table-link" href="{{ site.baseurl }}/malgeon_blog/">Malgeon Blog (Github page & Jekyll)</a></td>
                     </tr>
                 </tbody>
             </table>
