--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -21,6 +21,11 @@ a:hover {
     text-decoration: none;
 }
 
+li .subject {
+   font-weight: bold; 
+}
+
+
 /*
 pre {
     -moz-box-sizing: border-box;
