--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -42,11 +42,11 @@ layout: default
                 <tbody>
                     <tr>
                         <td class="project-fst-td u-md-padding">2020.05.07 ~ 07.03</td>
-                        <td class="project-snd-td"><a class="project-table-link" href="#">예약 서비스 클론 코딩 (공연, 영화 정보 제공 및 예약 웹 서비스)</a></td>
+                        <td class="project-snd-td"><a class="project-table-link" href="{{ site.baseurl }}/web_service_clone/">예약 서비스 클론 코딩 (공연, 영화 정보 제공 및 예약 웹 서비스)</a></td>
                     </tr>
                     <tr>
                         <td class="project-fst-td u-md-padding">2020.07.27 ~ 09.25</td>
-                        <td class="project-snd-td"><a class="project-table-link" href="{{ site.baseurl }}/malgeon_blog/">Malgeon Blog (Github page & Jekyll)</a></td>
+                        <td class="project-snd-td"><a class="project-table-link" href="{{ site.baseurl }}/feat_malgeon_blog/">Malgeon Blog (Github page & Jekyll)</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -56,6 +56,10 @@ layout: default
         <div class="project-table-div">
             <table>
                 <tbody>
+                    <tr>
+                        <td class="project-fst-td u-md-padding">2020.11.02 ~ </td>
+                        <td class="project-snd-td"><a class="project-table-link" href="{{ site.baseurl }}/android_app_service_clone/">영화 정보 제공 앱 어플리케이션</a></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
