--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,12 +18,12 @@ layout: default
             </div>
 
         <div class="col-md-8 pr-5 u-marginTop50">
-        <h4>&nbsp;개발자를 위해 공부중에 있습니다.</h4>
+        <h4>&nbsp;개발자를 위해 공부 중에 있습니다.</h4>
         &nbsp;&nbsp;대학에서 자료구조와 알고리즘을 C언어를 기반으로 배웠고, 개인적인 필요에 의해 JAVA로 자료구조와 알고리즘을 다시 공부하였습니다. <br><br>
-        &nbsp;&nbsp;개발 분야를 정하기 전 '결국 해봐야 어떤 분야가 재미있는지 아닌지 안다.' 라는 생각에 웹 개발을 5개월 가량 공부를 했으며 그 결과 이 블로그를 제작 할 수 있었습니다. <br> <br>
-        &nbsp;&nbsp;지금은 모바일에서 동작하는 아기자기한 움직임에 대한 매력에 안드로이드 앱 개발에 흥미를 느끼고 코틀린을 공부하여 앱 개발 경험을 쌓으려고 하고 있습니다.
+        &nbsp;&nbsp;개발 분야를 정하기 전 '결국 해봐야 어떤 분야가 재미있는지 아닌지 안다.' 라는 생각에 웹 개발을 5개월 가량 공부를 했으며 그 결과 이 블로그를 제작 할 수 있었습니다. 그 이후 2개월 가량 코틀린을 이용하여 안드로이드 앱 개발을 공부하였습니다. 
         <Br><Br>
-        &nbsp;&nbsp;이제 안드로이드 개발 개인 프로젝트를 정해서 어플리케이션에 대한 경험을 쌓고자 합니다.
+        &nbsp;&nbsp;최근 진행 중인 프로젝트는 목적에 맞는 아키텍쳐 디자인을 이해하기 위해 Boost Course 안드로이드 강의에서 제공하는 영화 관련 API를 바탕으로 영화 정보를 나타내주는 어플리케이션을 만들었습니다. 개발 언어로는 Kotlin을 사용하였습니다. Android Architecture Pattern으로 MVVM을 사용하였고, Android Architecture Components(Lifecycle, LiveData, ViewModel)를 사용하였습니다.
+
         <Br><Br> 
         </div>
     </div>
