210326 android project usrfulphoto start

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,10 +19,10 @@ layout: default
 
         <div class="col-md-8 pr-5 u-marginTop50">
         <h4>&nbsp;개발자를 위해 공부 중에 있습니다.</h4>
-        &nbsp;&nbsp;대학에서 자료구조와 알고리즘을 C언어를 기반으로 배웠고, 개인적인 필요에 의해 JAVA로 자료구조와 알고리즘을 다시 공부하였습니다. <br><br>
-        &nbsp;&nbsp;개발 분야를 정하기 전 '결국 해봐야 어떤 분야가 재미있는지 아닌지 안다.' 라는 생각에 웹 개발을 공부를 했으며 그 결과 이 블로그를 제작 할 수 있었습니다. 그 이후 코틀린을 이용하여 안드로이드 앱 개발을 공부하였습니다. 
+        &nbsp;&nbsp;대학에서 자료구조와 알고리즘을 C언어 와 JAVA로 공부하였습니다. <br><br>
+        &nbsp;&nbsp;JavaScript와 Java 그리고 Sprint Framework를 이용한 웹풀스택과 Kotlin와 Android Framework를 이용한 안드로이드 어느 한 분야에만 집중하지 않고 공부 중입니다. 적지 않은 시간을 투자하는 것이지만 모두 경험해 보고 싶었고, 현재는 앱 개발을 공부하고 있습니다 
         <Br><Br>
-        &nbsp;&nbsp;최근 진행 중인 프로젝트는 목적에 맞는 아키텍쳐 디자인을 이해하기 위해 Boost Course 안드로이드 강의에서 제공하는 영화 관련 API를 바탕으로 영화 정보를 나타내주는 어플리케이션을 만들었습니다. 개발 언어로는 Kotlin을 사용하였습니다. Android Architecture Pattern으로 MVVM을 사용하였고, Android Architecture Components(Lifecycle, LiveData, ViewModel)를 사용하였습니다.
+        &nbsp;&nbsp;지금은 Unsplash API를 이용하여 사진에 글귀를 기록하는 사진 에세이 애플리케이션을 만들고 있습니다.
         <Br><Br> 
         </div>
     </div>
@@ -40,12 +40,12 @@ layout: default
             <table>
                 <tbody>
                     <tr>
-                        <td class="project-fst-td u-md-padding">2020.05.07 ~ 07.03</td>
+                        <td class="project-fst-td u-md-padding">2020.05.07 ~ 2020.07.03</td>
                         <td class="project-snd-td"><a class="project-table-link" href="{{ site.baseurl }}/web_service_clone/">예약 서비스 클론 코딩 (공연, 영화 정보 제공 및 예약 웹 서비스)</a></td>
                     </tr>
                     <tr>
-                        <td class="project-fst-td u-md-padding">2020.07.27 ~ 09.25</td>
-                        <td class="project-snd-td"><a class="project-table-link" href="{{ site.baseurl }}/feat_malgeon_blog/">Malgeon Blog (Github page & Jekyll)</a></td>
+                        <td class="project-fst-td u-md-padding">2020.07.27 ~ 2020.09.25</td>
+                        <td class="project-snd-td"><a class="project-table-link" href="{{ site.baseurl }}/web_malgeon_blog/">Malgeon Blog (Github page & Jekyll)</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -56,8 +56,12 @@ layout: default
             <table>
                 <tbody>
                     <tr>
-                        <td class="project-fst-td u-md-padding">2020.11.30 ~ </td>
+                        <td class="project-fst-td u-md-padding">2020.11.30 ~ 2021.01.25</td>
                         <td class="project-snd-td"><a class="project-table-link" href="{{ site.baseurl }}/android_app_service_clone/">영화 정보 제공 앱 어플리케이션</a></td>
+                    </tr>
+                    <tr>
+                        <td class="project-fst-td u-md-padding">2021.02.25 ~ </td>
+                        <td class="project-snd-td"><a class="project-table-link" href="{{ site.baseurl }}/android_app_useful_photo_album/">Useful Photo Album</a></td>
                     </tr>
                 </tbody>
             </table>
